--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             <div class="conteiner">
                 <h2 hidden="hidden" class="advantages-title">Преимущества компании</h2>
                 <ul class="advantages-list flex">
-                    <li class="advantages-item">
+                    <li class="advantages-item icon-detail">
                         <h3 class="advantages-item-title">Внимание к деталям</h3>
                         <p class="advantages-item-description">Идейные соображения, а также начало повседневной работы по
                             формированию позиции.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item icon-time">
                         <h3 class="advantages-item-title">Пунктуальность</h3>
                         <p class="advantages-item-description">Задача организации, в особенности же рамки и место обучения кадров
                             влечет за собой.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item icon-planining">
                         <h3 class="advantages-item-title">Планирование</h3>
                         <p class="advantages-item-description">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item icon-technologies">
                         <h3 class="advantages-item-title">Современные технологии</h3>
                         <p class="advantages-item-description">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
