--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,29 @@
                 </nav>
                 <div class="contacts-header">
                     <ul class="contacts-header-items flex no-line">
-                        <li class="link"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+                        <li class="link">
+                            <a href="mailto:info@devstudio.com" class="contact-link flex">
+                                <div class="icon-contacts-position">
+                                    <svg class="contacts-icon" width="16px" height="12px">
+                                        <use href="./images/sprite.svg#icon-envelope-header"></use>
+                                    </svg>
+                                </div>
+                                <div>
+                                    info@devstudio.com
+                                </div>
+                            </a>
                         </li>
-                        <li class="link"><a href="tel:380961111111" class="contact-link">+38 096 111 11 11</a>
+                        <li class="link">
+                            <a href="tel:380961111111" class="contact-link flex">
+                                <div class="icon-contacts-position">
+                                    <svg class="contacts-icon" width="10px" height="16px">
+                                        <use href="./images/sprite.svg#icon-smartphone-header"></use>
+                                    </svg>
+                                </div>
+                                <div>
+                                    +38 096 111 11 11
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
