--- a/index.html
+++ b/index.html
@@ -30,9 +30,29 @@
                 </nav>
                 <div class="contacts-header">
                     <ul class="contacts-header-items flex no-line">
-                        <li class="link"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+                        <li class="link">
+                            <a href="mailto:info@devstudio.com" class="contact-link flex">
+                                <div class="icon-contacts-position">
+                                    <svg class="contacts-icon" width="16px" height="12px">
+                                        <use href="./images/sprite.svg#icon-envelope-header"></use>
+                                    </svg>
+                                </div>
+                                <div>
+                                    info@devstudio.com
+                                </div>
+                            </a>
                         </li>
-                        <li class="link"><a href="tel:380961111111" class="contact-link">+38 096 111 11 11</a>
+                        <li class="link">
+                            <a href="tel:380961111111" class="contact-link flex">
+                                <div class="icon-contacts-position">
+                                    <svg class="contacts-icon" width="10px" height="16px">
+                                        <use href="./images/sprite.svg#icon-smartphone-header"></use>
+                                    </svg>
+                                </div>
+                                <div>
+                                    +38 096 111 11 11
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +73,7 @@
                 <h2 hidden="hidden" class="advantages-title">Преимущества компании</h2>
                 <ul class="advantages-list flex">
                     <li class="advantages-item">
-                        <div class="icon-position">
+                        <div class="icon-advantages-position">
                             <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
@@ -63,7 +83,7 @@
                             формированию позиции.</p>
                     </li>
                     <li class="advantages-item">
-                        <div class="icon-position">
+                        <div class="icon-advantages-position">
                         <svg width="70" height="70">
                             <use href="./images/sprite.svg#icon-clock"></use>
                         </svg>
@@ -73,7 +93,7 @@
                             влечет за собой.</p>
                     </li>
                     <li class="advantages-item">
-                        <div class="icon-position">
+                        <div class="icon-advantages-position">
                             <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-diagram"></use>
                             </svg>
@@ -83,7 +103,7 @@
                             обуславливает.</p>
                     </li>
                     <li class="advantages-item">
-                        <div class="icon-position">
+                        <div class="icon-advantages-position">
                             <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-astronaut"></use>
                             </svg>
