header+footer done

--- a/index.html
+++ b/index.html
@@ -154,18 +154,123 @@
                 </ul>
             </div>
         </section>
+        <section class="section clients-section">
+            <div class="conteiner">
+                <h2 class="clients-title">Постоянные клиенты</h3>
+                <ul class="clients-list flex">
+                    <li class="clients-item">
+                        <div class="client-item-position">
+                            <a href="#" class="client-link">
+                            <svg class="icon1" width="41px" height="47px">
+                                <use href="./images/sprite.svg#icon-logo1">
+                                </use>
+                            </svg>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="clients-item">
+                        <div class="client-item-position">
+                            <a href="#" class="client-link">
+                                <svg class="icon1" width="40px" height="52px">
+                                    <use href="./images/sprite.svg#icon-logo2">
+                                    </use>
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="clients-item">
+                        <div class="client-item-position">
+                            <a href="#" class="client-link">
+                                <svg class="icon1" width="43px" height="41px">
+                                    <use href="./images/sprite.svg#icon-logo3">
+                                    </use>
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="clients-item">
+                        <div class="client-item-position">
+                            <a href="#" class="client-link">
+                                <svg class="icon1" width="84px" height="41px">
+                                    <use href="./images/sprite.svg#icon-logo4">
+                                    </use>
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="clients-item">
+                        <div class="client-item-position">
+                            <a href="#" class="client-link">
+                                <svg class="icon1" width="63px" height="45px">
+                                    <use href="./images/sprite.svg#icon-logo5">
+                                    </use>
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="clients-item">
+                        <div class="client-item-position">
+                            <a href="#" class="client-link">
+                                <svg class="icon1" width="94px" height="44px">
+                                    <use href="./images/sprite.svg#icon-logo6">
+                                    </use>
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 <!--Футер-->
     <footer class="page-footer">
         <div class="conteiner">
-                <a href="./index.html" class="no-line"><span class="logo-part1">Web</span><span class="logo-footer">Studio</span></a>
-                <address class="address">
-                    <ul class="address-list no-line">
-                        <li class="address-footer">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li class="contacts-footer"><a href="mailto:info@example.com">info@example.com</a></li>
-                        <li class="contacts-footer"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-                    </ul>
-                </address>
+                <div class="footer-flex flex">
+                    <div class="address-conteiner">
+                        <a href="./index.html" class="no-line"><span class="logo-part1">Web</span><span
+                                class="logo-footer">Studio</span></a>
+                        <address class="address">
+                            <ul class="address-list no-line">
+                                <li class="address-footer">г. Киев, пр-т Леси Украинки, 26</li>
+                                <li class="contacts-footer"><a href="mailto:info@example.com">info@example.com</a></li>
+                                <li class="contacts-footer"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                            </ul>
+                        </address>
+                    </div>
+                    <div class="social-links">
+                        <p class="social-links-title">Присоединяйтесь</p>
+                        <ul class="social-links-list flex">
+                            <li class="social-link-item">
+                                <a href="#" class="social-link">
+                                    <svg class="social-logo-footer" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-instagram-black-footer"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link ">
+                                    <svg class="social-logo-footer" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-twitter-black-footer"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link ">
+                                    <svg class="social-logo-footer" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-facebook-black-footer"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link">
+                                    <svg class="social-logo-footer" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-linkedin-black-footer"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
         </div>
     </footer>
 </body>
