--- a/portfolio.html
+++ b/portfolio.html
@@ -177,15 +177,52 @@
 <!--Футер-->
     <footer class="page-footer">
         <div class="conteiner">
-            <a href="./index.html" class="no-line"><span class="logo-part1">Web</span><span
-                    class="logo-footer">Studio</span></a>
-            <address class="address">
-                <ul class="address-list no-line">
-                    <li class="address-footer">г. Киев, пр-т Леси Украинки, 26</li>
-                    <li class="contacts-footer"><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="contacts-footer"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="footer-flex flex">
+                <div class="address-conteiner">
+                    <a href="./index.html" class="no-line"><span class="logo-part1">Web</span><span
+                            class="logo-footer">Studio</span></a>
+                    <address class="address">
+                        <ul class="address-list no-line">
+                            <li class="address-footer">г. Киев, пр-т Леси Украинки, 26</li>
+                            <li class="contacts-footer"><a href="mailto:info@example.com">info@example.com</a></li>
+                            <li class="contacts-footer"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="social-links">
+                    <p class="social-links-title">Присоединяйтесь</p>
+                    <ul class="social-links-list flex">
+                        <li class="social-link-item">
+                            <a href="#" class="social-link">
+                                <svg class="social-logo-footer" width="20px" height="20px">
+                                    <use href="./images/sprite.svg#icon-instagram-black-footer"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link-item flex">
+                            <a href="#" class="social-link ">
+                                <svg class="social-logo-footer" width="20px" height="20px">
+                                    <use href="./images/sprite.svg#icon-twitter-black-footer"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link-item flex">
+                            <a href="#" class="social-link ">
+                                <svg class="social-logo-footer" width="20px" height="20px">
+                                    <use href="./images/sprite.svg#icon-facebook-black-footer"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-link-item flex">
+                            <a href="#" class="social-link">
+                                <svg class="social-logo-footer" width="20px" height="20px">
+                                    <use href="./images/sprite.svg#icon-linkedin-black-footer"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
