--- a/index.html
+++ b/index.html
@@ -135,21 +135,141 @@
                         <img src="./images/team-card1-opt.jpg" alt="фото Игоря Демьяненко" class="team-card" width="270">
                         <h3 class="team-item-title">Игорь Демьяненко</h3>
                         <p lang="en" class="team-item-discription">Product Designer</p>
+                        <ul class="social-links-list flex">
+                            <li class="social-link-item">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-item">
                         <img src="./images/team-card2-opt.jpg" alt="фото Ольги Репиной" class="team-card" width="270">
                         <h3 class="team-item-title">Ольга Репина</h3>
                         <p lang="en" class="team-item-discription">Frontend Developer</p>
+                        <ul class="social-links-list flex">
+                            <li class="social-link-item">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-item">
                         <img src="./images/team-card3-opt.jpg" alt="фото Николая Тарасова" class="team-card" width="270">
                         <h3 class="team-item-title">Николай Тарасов</h3>
                         <p lang="en" class="team-item-discription">Marketing</p>
+                        <ul class="social-links-list flex">
+                            <li class="social-link-item">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="team-item">
                         <img src="./images/team-card4-opt.jpg" alt="фото Михаила Урмакова" class="team-card" width="270">
                         <h3 class="team-item-title">Михаил Ермаков</h3>
                         <p lang="en" class="team-item-discription">UI Designer</p>
+                        <ul class="social-links-list flex">
+                            <li class="social-link-item">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-link-item flex">
+                                <a href="#" class="social-link-main">
+                                    <svg class="social-logo-main" width="20px" height="20px">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
