--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a href="mailto:info@devstudio.com" class="contact-link flex">
                                 <div class="icon-contacts-position">
                                     <svg class="contacts-icon" width="16px" height="12px">
-                                        <use href="./images/sprite.svg#icon-envelope-header"></use>
+                                        <use href="./images/icons.svg#icon-envelope-header"></use>
                                     </svg>
                                 </div>
                                 <div>
@@ -46,7 +46,7 @@
                             <a href="tel:380961111111" class="contact-link flex">
                                 <div class="icon-contacts-position">
                                     <svg class="contacts-icon" width="10px" height="16px">
-                                        <use href="./images/sprite.svg#icon-smartphone-header"></use>
+                                        <use href="./images/icons.svg#icon-smartphone-header"></use>
                                     </svg>
                                 </div>
                                 <div>
@@ -75,7 +75,7 @@
                     <li class="advantages-item">
                         <div class="icon-advantages-position">
                             <svg width="70" height="70">
-                                <use href="./images/sprite.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="advantages-item-title">Внимание к деталям</h3>
@@ -85,7 +85,7 @@
                     <li class="advantages-item">
                         <div class="icon-advantages-position">
                         <svg width="70" height="70">
-                            <use href="./images/sprite.svg#icon-clock"></use>
+                            <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                         </div>
                         <h3 class="advantages-item-title">Пунктуальность</h3>
@@ -95,7 +95,7 @@
                     <li class="advantages-item">
                         <div class="icon-advantages-position">
                             <svg width="70" height="70">
-                                <use href="./images/sprite.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="advantages-item-title">Планирование</h3>
@@ -105,7 +105,7 @@
                     <li class="advantages-item">
                         <div class="icon-advantages-position">
                             <svg width="70" height="70">
-                                <use href="./images/sprite.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="advantages-item-title">Современные технологии</h3>
@@ -139,28 +139,28 @@
                             <li class="social-link-item">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -174,28 +174,28 @@
                             <li class="social-link-item">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -209,28 +209,28 @@
                             <li class="social-link-item">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -244,28 +244,28 @@
                             <li class="social-link-item">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link-main">
                                     <svg class="social-logo-main" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -276,13 +276,13 @@
         </section>
         <section class="section clients-section">
             <div class="conteiner">
-                <h2 class="clients-title">Постоянные клиенты</h3>
+                <h3 class="clients-title">Постоянные клиенты</h3>
                 <ul class="clients-list flex">
                     <li class="clients-item">
                         <div class="client-item-position">
                             <a href="#" class="client-link">
                             <svg class="icon1" width="41px" height="47px">
-                                <use href="./images/sprite.svg#icon-logo1">
+                                <use href="./images/icons.svg#icon-logo1">
                                 </use>
                             </svg>
                             </a>
@@ -292,7 +292,7 @@
                         <div class="client-item-position">
                             <a href="#" class="client-link">
                                 <svg class="icon1" width="40px" height="52px">
-                                    <use href="./images/sprite.svg#icon-logo2">
+                                    <use href="./images/icons.svg#icon-logo2">
                                     </use>
                                 </svg>
                             </a>
@@ -302,7 +302,7 @@
                         <div class="client-item-position">
                             <a href="#" class="client-link">
                                 <svg class="icon1" width="43px" height="41px">
-                                    <use href="./images/sprite.svg#icon-logo3">
+                                    <use href="./images/icons.svg#icon-logo3">
                                     </use>
                                 </svg>
                             </a>
@@ -312,7 +312,7 @@
                         <div class="client-item-position">
                             <a href="#" class="client-link">
                                 <svg class="icon1" width="84px" height="41px">
-                                    <use href="./images/sprite.svg#icon-logo4">
+                                    <use href="./images/icons.svg#icon-logo4">
                                     </use>
                                 </svg>
                             </a>
@@ -322,7 +322,7 @@
                         <div class="client-item-position">
                             <a href="#" class="client-link">
                                 <svg class="icon1" width="63px" height="45px">
-                                    <use href="./images/sprite.svg#icon-logo5">
+                                    <use href="./images/icons.svg#icon-logo5">
                                     </use>
                                 </svg>
                             </a>
@@ -332,7 +332,7 @@
                         <div class="client-item-position">
                             <a href="#" class="client-link">
                                 <svg class="icon1" width="94px" height="44px">
-                                    <use href="./images/sprite.svg#icon-logo6">
+                                    <use href="./images/icons.svg#icon-logo6">
                                     </use>
                                 </svg>
                             </a>
@@ -359,32 +359,32 @@
                     </div>
                     <div class="social-links">
                         <p class="social-links-title">Присоединяйтесь</p>
-                        <ul class="social-links-list flex">
+                        <ul class="social-links-list-footer flex">
                             <li class="social-link-item">
                                 <a href="#" class="social-link">
                                     <svg class="social-logo-footer" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-instagram-black-footer"></use>
+                                        <use href="./images/icons.svg#icon-instagram-black-footer"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link ">
                                     <svg class="social-logo-footer" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-twitter-black-footer"></use>
+                                        <use href="./images/icons.svg#icon-twitter-black-footer"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link ">
                                     <svg class="social-logo-footer" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-facebook-black-footer"></use>
+                                        <use href="./images/icons.svg#icon-facebook-black-footer"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-link-item flex">
                                 <a href="#" class="social-link">
                                     <svg class="social-logo-footer" width="20px" height="20px">
-                                        <use href="./images/sprite.svg#icon-linkedin-black-footer"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-black-footer"></use>
                                     </svg>
                                 </a>
                             </li>
