--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                             <a href="mailto:info@devstudio.com" class="contact-link flex">
                                 <div class="icon-contacts-position">
                                     <svg class="contacts-icon" width="16px" height="12px">
-                                        <use href="./images/sprite.svg#icon-envelope-header"></use>
+                                        <use href="./images/icons.svg#icon-envelope-header"></use>
                                     </svg>
                                 </div>
                                 <div>
@@ -49,7 +49,7 @@
                             <a href="tel:380961111111" class="contact-link flex">
                                 <div class="icon-contacts-position">
                                     <svg class="contacts-icon" width="10px" height="16px">
-                                        <use href="./images/sprite.svg#icon-smartphone-header"></use>
+                                        <use href="./images/icons.svg#icon-smartphone-header"></use>
                                     </svg>
                                 </div>
                                 <div>
@@ -62,6 +62,7 @@
             </div>
         </div>
     </header>
+
 <!--Основа-->
     <main class="page-main-portfolio">
 <!--Портфолио-->
@@ -191,32 +192,32 @@
                 </div>
                 <div class="social-links">
                     <p class="social-links-title">Присоединяйтесь</p>
-                    <ul class="social-links-list flex">
+                    <ul class="social-links-list-footer flex">
                         <li class="social-link-item">
                             <a href="#" class="social-link">
                                 <svg class="social-logo-footer" width="20px" height="20px">
-                                    <use href="./images/sprite.svg#icon-instagram-black-footer"></use>
+                                    <use href="./images/icons.svg#icon-instagram-black-footer"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-link-item flex">
                             <a href="#" class="social-link ">
                                 <svg class="social-logo-footer" width="20px" height="20px">
-                                    <use href="./images/sprite.svg#icon-twitter-black-footer"></use>
+                                    <use href="./images/icons.svg#icon-twitter-black-footer"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-link-item flex">
                             <a href="#" class="social-link ">
                                 <svg class="social-logo-footer" width="20px" height="20px">
-                                    <use href="./images/sprite.svg#icon-facebook-black-footer"></use>
+                                    <use href="./images/icons.svg#icon-facebook-black-footer"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-link-item flex">
                             <a href="#" class="social-link">
                                 <svg class="social-logo-footer" width="20px" height="20px">
-                                    <use href="./images/sprite.svg#icon-linkedin-black-footer"></use>
+                                    <use href="./images/icons.svg#icon-linkedin-black-footer"></use>
                                 </svg>
                             </a>
                         </li>
